# baylib

./: .gitignore  BayesianNet.cpp  BayesianNet.h  CMakeLists.txt  README.md  main.cpp  oldmain.cpp  setup.py
.github/workflows/: build-gpu.yml  ci.yml
baylib/: CMakeLists.txt  baylib_concepts.hpp
baylib/cmake_module/: FindThrust.cmake
baylib/graph/: graph.hpp  graph2.hpp
baylib/inference/: abstract_inference_algorithm.h  abstract_inference_algorithm.hpp  adaptive_importance_sampling.hpp  gibbs_sampling.hpp  inference_algorithm.h  likelihood_weighting.hpp  likelihood_weighting_cuda.hpp  logic_sampling.hpp  logic_sampling_cuda.hpp  rejection_sampling.hpp
baylib/inference/cuda/: logic_sampler.cu  logic_sampler.cuh  logic_sampling_cuda.hpp  samplers_cuda.cu  samplers_cuda.cuh
baylib/inference/opencl/: adaptive_importance_sampling_opencl.hpp  logic_sampling_opencl.hpp  vectorized_inference_opencl.hpp
baylib/network/: algorithm.hpp  bayesian_net.hpp  bayesian_network.hpp  bayesian_utils.hpp  random_variable.hpp
baylib/network/probability/: cpt.hpp
baylib/parser/: net_parser.hpp  xdsl_parser.hpp
baylib/parser/pugixml/: pugixml.cpp
baylib/probability/: condition.hpp  condition_factory.hpp  cpt.hpp  icpt.hpp  marginal_distribution.hpp  marginal_ptable.hpp
baylib/smile_utils/: smile_utils.hpp
baylib/smile_utils/rapidxml/: rapidxml.hpp
baylib/tools/: cow.hpp  generator_wrapper.hpp  tpool_manager.h
baylib/tools/cow/: shared_data.hpp  shared_ptr.hpp
baylib/tools/gpu/: cuda_graph_adapter.cuh  cuda_utils.cu  cuda_utils.cuh  gpu_utils.hpp
baylib/tools/random/: random_generator.hpp
baylib/tools/threads/: thread_pool.hpp  tpool_manager.cpp
benchmark/: CMakeLists.txt
cmake/: FindThrust.cmake
docs/: doxy-config
docs/html/: abstract__inference__algorithm_8hpp.html  abstract__inference__algorithm_8hpp_source.html  adaptive__importance__sampling_8hpp.html  adaptive__importance__sampling_8hpp_source.html  annotated.html  bayesian__net_8hpp.html  bayesian__net_8hpp_source.html  bayesian__network_8hpp.html  bayesian__network_8hpp_source.html  bayesian__utils_8hpp.html  bayesian__utils_8hpp_source.html  baylib__assert_8h_source.html  baylib__concepts_8hpp_source.html  classbaylib_1_1bayesian__net.html  classbaylib_1_1condition.html  classbaylib_1_1condition__factory.html  classbaylib_1_1cow_1_1cpt.html  classbaylib_1_1cow_1_1icpt.html  classbaylib_1_1cow_1_1shared__data.html  classbaylib_1_1cow_1_1shared__ptr.html  classbaylib_1_1inference_1_1adaptive__importance__sampling.html  classbaylib_1_1inference_1_1gibbs__sampling.html  classbaylib_1_1inference_1_1inference__algorithm.html  classbaylib_1_1inference_1_1likelihood__weighting.html  classbaylib_1_1inference_1_1logic__sampling.html  classbaylib_1_1inference_1_1parallel__inference__algorithm.html  classbaylib_1_1inference_1_1rejection__sampling.html  classbaylib_1_1inference_1_1vectorized__inference__algorithm.html  classbaylib_1_1marginal__distribution.html  classbaylib_1_1named__random__variable.html  classbaylib_1_1random__generator.html  classbaylib_1_1random__variable.html  classbaylib_1_1seed__factory.html  classbaylib_1_1xdsl__parser.html  classbn_1_1bayesian__network.html  classbn_1_1condition.html  classbn_1_1condition__factory.html  classbn_1_1cow_1_1cpt.html  classbn_1_1cow_1_1icpt.html  classbn_1_1cow_1_1shared__data.html  (+112 more)
docs/latex/: abstract__inference__algorithm_8hpp.tex  abstract__inference__algorithm_8hpp_source.tex  adaptive__importance__sampling_8hpp.tex  adaptive__importance__sampling_8hpp_source.tex  annotated.tex  bayesian__net_8hpp.tex  bayesian__net_8hpp_source.tex  bayesian__network_8hpp.tex  bayesian__network_8hpp_source.tex  bayesian__utils_8hpp.tex  bayesian__utils_8hpp_source.tex  baylib__assert_8h_source.tex  baylib__concepts_8hpp_source.tex  classbaylib_1_1bayesian__net.tex  classbaylib_1_1condition.tex  classbaylib_1_1condition__factory.tex  classbaylib_1_1cow_1_1cpt.tex  classbaylib_1_1cow_1_1icpt.eps  classbaylib_1_1cow_1_1icpt.tex  classbaylib_1_1cow_1_1shared__data.eps  classbaylib_1_1cow_1_1shared__data.tex  classbaylib_1_1cow_1_1shared__ptr.tex  classbaylib_1_1marginal__distribution.tex  (+136 more)
examples/: CMakeLists.txt  example_create_network.cpp  example_cuda_inference.cpp  example_gpu_inference.cpp  example_inference.cpp  example_interact_network.cpp  example_load_network.cpp  example_named_network.cpp  example_network.cpp  example_opencl_inference.cpp  example_xdsl.cpp
examples/xdsl/: Animals.xdsl  BarleyWeed.xdsl  Credit.xdsl  Link.xdsl  NoisyAND.xdsl  VentureBNExpanded.xdsl
exceptions/: FileNotFoundException.h
graph/: BayesianNet.cpp  BayesianNet.h  DAG.cpp  DAG.h  bnode.cpp  bnode.h  graph.hpp
graphs/: DAG.h
inference/: logic_sampling.cpp  logic_sampling.hpp
network/: bayesian_network.h  bayesian_network.hpp
networks/: BayesianNet.h
parser/: BNReader.h  parser.h
probability/: CPT.h
pugixml/: pugixml.cpp  pugixml.hpp
python/: CMakeLists.txt
python/baylib/: __init__.py.in
python/baylib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/baylib/baylib.egg-info/: PKG-INFO  top_level.txt
python/bindings/: bayesian.h  bayesian_net.cpp  inference.h  pybaylib.cpp  types.h
python_examples/: example_network.py
scripts/: install.sh  install_dependencies.sh  install_opencl_drivers.sh
test/: CMakeLists.txt  bnet_test.cpp  cow_test.cpp  cpt_test.cpp  evidence_test.cpp  gibbs_sampling_test.cpp  inference_test.cpp  likelihood_weighting_test.cpp  logic_sampling_test.cpp  parser_test.cpp  rank_test.cpp  regression_inference_test.cpp  testFile.hpp
test/baylib/: CMakeLists.txt  baylib_assert.h
test/baylib/inference/: abstract_inference_algorithm.hpp  adaptive_importance_sampling.hpp  gibbs_sampling.hpp
test/baylib/network/: bayesian_net.hpp  bayesian_utils.hpp  random_variable.hpp
test/baylib/probability/: cpt.hpp
test/baylib/tools/cow/: shared_ptr.hpp
test/xdsl/: AsiaDiagnosis.xdsl  Hailfinder2.5.xdsl  VentureBN.xdsl
tools/: COW.h  COW.hpp  VariableNodeMap.cpp  VariableNodeMap.h  thread_pool.hpp
xdls/: Coma.xdsl
xml_files/: ventureBN.xdsl
(+89 files in other folders)
